[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/FireballLeft.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fireball/FB001.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[node name="Fireball" type="Area2D" groups=[
"Projectile",
]]
collision_layer = 133
collision_mask = 133
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 10, 0 )
scale = Vector2( -1, 1 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="ResetTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Fireball_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Fireball_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ResetTimer" to="." method="_on_ResetTimer_timeout"]
